--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 Jinja2==2.11.2
 requests 
-flask-marshmallow
-marshmallow-sqlalchemy
-marshmallow
+flask-restx
+flask_pymongo
+dnspython
